vulnerable-manifests/bad-pod-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: insecure-app
  namespace: default
spec:
  containers:
  - name: app-container
    image: nginxinc/nginx-unprivileged:latest
    securityContext:
      runAsUser: 1000
      runAsNonRoot: true
      privileged: false
      allowPrivilegeEscalation: false
    resources:
      limits:
        cpu: "500m"
        memory: "256Mi"
      requests:
        cpu: "250m"
        memory: "128Mi"
