vulnerable-manifests/netpolicy-insecure-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: insecure-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
